--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
 </head>
 
 <body>
-  <div id="root">
-    <input type="text" oninput="updateState(this[attr])" value="ronaldo" bind="value:name">
+  <div id="root" class="root">
     <span>
       Meu nome é: <span bind="textContent:name"></span>
     </span>
+    <input type="text" oninput="updateState(this[attr])" value="ronaldo" bind="value:name">
+    <span>
+      Minha idade é: <span bind="textContent:idade"></span>
+    </span>
+    <input type="text" oninput="updateState(this[attr])" value="ronaldo" bind="value:idade">
   </div>
   <script type="module" src="./js/index.js"></script>
 </body>
