No module version

--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
     </span>
     <input type="text" oninput="updateState(this[attr])" value="ronaldo" bind="value:name">
     <span>
-      Minha idade é: <span bind="textContent:idade"></span>
+      Horário: <span bind="innerHTML:hora"></span>
     </span>
-    <input type="text" oninput="updateState(this[attr])" value="ronaldo" bind="value:idade">
   </div>
-  <script type="module" src="./js/index.js"></script>
+
+  <script type="text/javascript" src="./js/bind.js"></script>
+  <script type="text/javascript" src="./js/index.js"></script>
 </body>
 
 </html>
