--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
     </span>
   </div>
 
-  <script type="text/javascript" src="./js/bind.js"></script>
-  <script type="text/javascript" src="./js/index.js"></script>
+  <script type="module" src="./js/index.js"></script>
 </body>
 
 </html>
