--- a/index.html
+++ b/index.html
@@ -12,10 +12,17 @@
 
 <body>
   <div id="root" class="root">
+    <b>Exemplo 1 - Mostrando Dados de um input</b>
     <span>
       Meu nome é: <span bind="textContent:name"></span>
     </span>
     <input type="text" oninput="updateState(this[attr])" value="ronaldo" bind="value:name">
+    <b>Exemplo 2 - Contador de cliques</b>
+    <span>
+      Conta cliques: <span bind="textContent:count"></span>
+    </span>
+    <button type="text" onclick="updateState(this[attr] + 1)" bind="_:count">Clique aqui!</button>
+    <b>Exemplo 3 - Mostrando o Horário</b>
     <span>
       Horário: <span bind="innerHTML:hora"></span>
     </span>
