--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <div id="root" class="root">
-    <b>Exemplo 1 - Mostrando Dados de um input</b>
+    <b>Exemplo 1 - Mostrando dados de um input</b>
     <span>
       Meu nome é: <span bind="textContent:name"></span>
     </span>
