--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <span>
       Meu nome é: <span bind="textContent:name"></span>
     </span>
-    <input type="text" oninput="updateState(this[attr])" value="ronaldo" bind="value:name">
+    <input type="text" oninput="updateState(this[attr])" bind="value:name">
     <b>Exemplo 2 - Contador de cliques</b>
     <span>
       Conta cliques: <span bind="textContent:count"></span>
