--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <span>
       Conta cliques: <span bind="textContent:count"></span>
     </span>
-    <button type="text" onclick="updateState(this[attr] + 1)" bind="_:count">Clique aqui!</button>
+    <button type="text" onclick="updateState(this[attr] + 1)" bind=":count">Clique aqui!</button>
     <b>Exemplo 3 - Mostrando o Horário</b>
     <span>
       Horário: <span bind="innerHTML:hora"></span>
