--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       Meu nome é: <span bind="textContent:name"></span>
     </span>
     <input type="text" oninput="updateState(this[attr])" bind="value:name">
-    <b>Exemplo 2 - Contador de cliques</b>
+    <b>Exemplo 2 - Contador de Cliques</b>
     <span>
-      Conta cliques: <span bind="textContent:count"></span>
+      Conta Cliques: <span bind="textContent:count"></span>
     </span>
     <button type="text" onclick="updateState(this[attr] + 1)" bind=":count">Clique aqui!</button>
     <b>Exemplo 3 - Mostrando o Horário</b>
